Added comment at the files where i coded. think it's easy to look around. it's simple app though!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">MyAppPortfolio</string>
     <string name="action_settings">Settings</string>
-    
+
+    //added some msg for Toast text
     <string name="spotify">this button will launch spotifystreamer App!!!</string>
     <string name="scores">this button will launch scores App!!! </string>
     <string name="library">this button will launch library App!!!</string>
